# text_insights

./: .gitignore  Cargo.toml  README.md
examples/: programming.txt  sample.txt
src/: analyzer.rs  main.rs  utils.rs  visualizer.rs
